<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_search_and_notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.fragment.SearchAndNotificationFragment">





    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        tools:text="Search query term" />
    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_weight=".5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/begin_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="begin date" />



            <EditText
                android:id="@+id/begin_date_edit"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <CheckBox
                android:id="@+id/art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/begin_date_edit"
                android:text="art" />

            <CheckBox
                android:id="@+id/business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/art"
                android:text="business" />

            <CheckBox
                android:id="@+id/entrepreneurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/business"
                android:text="entrepreneurs" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="right">

            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="End date" />

            <EditText
                android:id="@+id/end_date_edit"
                android:layout_marginTop="20dp"

                android:layout_width="150dp"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="date" />


            <CheckBox
                android:id="@+id/politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/end_date_edit"
                android:text="politics" />

            <CheckBox
                android:id="@+id/sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/politics"
                android:text="sport" />

            <CheckBox
                android:id="@+id/travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sport"
                android:text="travel"

                />

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <Button
            android:id="@+id/Search_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="#ffffff"
            android:text="SEARCH" />

        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="enable notification (once per day)" />

    </LinearLayout>

</LinearLayout>