...
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        <FrameLayout
            android:id="@+id/activity_main_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </FrameLayout>

...
